<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="220dp"
        android:layout_height="224dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/login"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="349dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:fontFamily="serif"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:textSize="12sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textview_border"
            android:drawableStart="@drawable/ic_user_password"
            android:drawablePadding="10dp"
            android:fontFamily="serif"
            android:hint="@string/gotmytrip_password"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:textSize="12sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/loading_btn"
            android:onClick="login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="Login"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif"
                android:onClick="create_account"
                android:text="@string/sigup"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:onClick="forgot"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>